# margo

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: api.py
backend/api/endpoints/: health.py  search.py
docs/: eda.md  ml_system_design_doc.md
paper_agent/: agent.py  pyproject.toml
paper_agent/tools/: rag_tool.py  summary_tool.py
paper_agent/tools/paper_searcher/: agent.py  arxiv_tool.py
src/: agent.py
src/frontend/: main.html  script.js  styles.css
src/paper_assistant/: agent.py  pyproject.toml
src/paper_assistant/tools/: rag_tool.py  summary_tool.py
src/paper_assistant/tools/paper_searcher/: agent.py  arxiv_tool.py  papers_with_code_tool.py  web_search_tool.py
src/paper_searcher/: agent.py  arxiv_tool.py  papers_with_code_tool.py  web_search_tool.py
src/tools/: rag_tool.py  summary_tool.py
src/tools/paper_searcher/: agent.py
tg_bot/: app.py  pyproject.toml
