[tool.poetry]
name = "margo"
version = "0.1.0"
description = ""
authors = ["starminalush <alica154323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tavily-python = "^0.5.0"
langgraph = "0.2.60"
langchain-community = "^0.3.8"
arxiv = "^2.1.3"
langchain-openai = "^0.2.10"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.6.0"

